--- a/ExeBox.Wpf/ExeBox.Wpf.csproj
+++ b/ExeBox.Wpf/ExeBox.Wpf.csproj
@@ -41,10 +41,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>References\System.Windows.Interactivity.dll</HintPath>
-    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -64,12 +60,16 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Command\Commands.cs" />
+    <Compile Include="Config\ConfigManager.cs" />
     <Compile Include="Controller\LogPanelController.cs" />
     <Compile Include="Controller\MainController.cs" />
     <Compile Include="Model\ILoggable.cs" />
     <Compile Include="Utils\Extensions.cs" />
     <Compile Include="View\AboutCard.xaml.cs">
       <DependentUpon>AboutCard.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\FontDialog.xaml.cs">
+      <DependentUpon>FontDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\LogPanel.xaml.cs">
       <DependentUpon>LogPanel.xaml</DependentUpon>
@@ -103,6 +103,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\AboutCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\FontDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -167,6 +171,12 @@
       <Version>6.0.0</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="System.Windows.Interactivity.WPF">
+      <Version>2.0.20525</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
